# cookiecutter-fastapi-postgresql-celery

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_dir}}/: .env  .gitignore  docker-compose.yml  pyproject.toml
{{cookiecutter.repo_dir}}/docker/api/: Dockerfile
{{cookiecutter.repo_dir}}/docker/backend/: Dockerfile
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/: celeryd.py  config.py  db.py  main.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/alembic/: env.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/alembic/versions/: 13cb865cb540_dummy_base_schema.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/api/: __init__.py  dummy.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/backend/: __init__.py  backend_pre_start.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/backend/tasks/: dummy.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/models/: __init__.py  base.py  dummy.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/schemas/: dummy.py
