[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.base_version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.4.2"
celery = "^4.4.2"
fastapi = "^0.54.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
pydantic = "^1.4"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
tenacity = "^6.1.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
bandit = "^1.7.0"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
